2007-07-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): explicitly set the
	start and due dates to nil if hasStartDate and hasDueDate are
	false.

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-passwordInContext:context]): made method public.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromTodo:_task]): set "isallday" and "isopaque"
	to false to avoid a null violation.

2007-07-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-contentAsString]): returns the message encoded in ISO Latin 1
	again.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): read the
	SOGoSuperUsername user defaults.
	([SOGoUser -initWithLogin:newLoginroles:newRoles]): simplified
	method.
	([SOGoUser -rolesForObject:objectinContext:context]): if the
	current user is the superuser, grant him/her the "owner" role.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -ocsFolder]): create
	the folder only if the current user is the owner of the future
	folder.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -contentAsString]): we return the content
	based on the permissions returned by the security manager instead
	of by looking at the user roles.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -calendarFolders]): read the calendar
	folders of the user to whom this folder belongs instead of the
	active user. This way, a delegate user will be able to have the
	same view that the original user has if he connects from his user
	directory.

	* Main/SOGo.m ([SOGo -lookupUser:_keyinContext:]): check if the
	user exists before creating the SOGoUserFolder instance. If not,
	returns nil.

	* UI/MailerUI/UIxMailSourceView.[hm]: new class module designed to
	return the message source code in plain text.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject